--- a/Home.wiki
+++ b/Home.wiki
@@ -76,9 +76,9 @@ System.out.println("Recovered payload message: " + jwsObject.getPayload());
 
 == JavaDocs are your friend ==
 
-The library code comes with complete JavaDocs which can help you discover and exploit many special features. You can get them in the download package or browse them online.
+The library code comes with complete JavaDocs which can help you discover and make use of many special features. The JavaDocs are included in the download package. You can also browse them online.
 
-http://nimbusds.com/files/jose-jwt/javadoc/
+    http://nimbusds.com/files/jose-jwt/javadoc/
 
 == Related IETF drafts ==
 
