--- a/Home.wiki
+++ b/Home.wiki
@@ -1,6 +1,6 @@
 = Nimbus JOSE+JWT =
 
-Nimbus JOSE+JWT is a comprehensive Java implementation of the Javascript Object Signing and Encryption (JOSE) spec suite and the closely related JSON Web Token (JWT) spec. 
+Nimbus JOSE+JWT is a Java library that implements the **Javascript Object Signing and Encryption (JOSE)** spec suite and the closely related **JSON Web Token (JWT)** spec. 
 
 == Supported JOSE and JWT objects ==
 
@@ -62,9 +62,9 @@ System.out.println("Serialised JWS object: " + s);
 // Parse back and check signature
 jwsObject = JWSObject.parse(s);
 
-JWSVerifier verifier = new MACVerifier(sharedKey.getBytes());
+JWSValidator validator = new MACValidator(sharedKey.getBytes());
                 
-boolean validSignature = jwsObject.verify(verifier);
+boolean validSignature = jwsObject.validate(validator);
 
 if (validSignature)
     System.out.println("Valid JWS signature!");
@@ -103,3 +103,40 @@ The Nimbus JOSE+JWT library has minimal dependencies.
 
         * [optional] The BouncyCastle.org cryptography provider for Java, for 
           ECDSA signing and validation.
+
+== Uses ==
+
+        * JWT bearer tokens in OAuth 2.0
+        
+        * OpenID Connect
+        
+        * XMPP
+
+
+== About us ==
+
+The principal maintainer of this library is Nimbus Directory Services 
+[http://NimbusDS.com]. The initial code was based on JWS/JWE/JWT crypto classes
+factored out of the OpenInfoCard project. A rewrite to fully decouple JOSE + JWT
+object representation from crypto algorithm implementation led to the next major 
+2.0 release in October 2012.
+
+You're welcome to contribute crypto handlers for standard algorithms which have
+not been implemented yet (most JWE algorithms).
+
+
+== Acknowledgements ==
+
+        * Axel Nennker and the guys behind OpenInfoCard.
+        * Everyone on the JOSE IETF WG list.
+        * CertiVox UK for supporting the development.
+
+
+== To post bug reports and suggestions ==
+
+        https://bitbucket.org/nimbusds/nimbus-jose-jwt/issues
+
+
+== Follow us on Twitter ==
+        
+        https://twitter.com/NimbusDS
