--- a/Home.wiki
+++ b/Home.wiki
@@ -19,7 +19,7 @@ following JOSE and JWT objects:
 
 == Fully decoupled JOSE/JWT object representation from crypto algorithm implementation ==
 
-The JOSE and JWT object representation is completely decoupled from JSON Web Algorithm (JWA) implementations through a set of simple interfaces for signing, validating, encrypting and decrypting the objects.
+The JOSE and JWT object representation is completely decoupled from JSON Web Algorithm (JWA) implementations through a set of simple interfaces for signing, verifying, encrypting and decrypting the objects.
 
 
 == Standard JWS algorithms fully implemented, JWE algorithms on the roadmap ==
@@ -102,7 +102,7 @@ The Nimbus JOSE+JWT library has minimal dependencies.
         * JSON Smart for highly efficient parsing and serialisation of JSON. 
 
         * [optional] The BouncyCastle.org cryptography provider for Java, for 
-          ECDSA signing and validation.
+          ECDSA signing and verification.
 
 == Uses ==
 
