Update for 2.9 release

--- a/Home.wiki
+++ b/Home.wiki
@@ -82,15 +82,15 @@ The library code comes with complete JavaDocs which can help you discover and ma
 
 == Related IETF drafts ==
 
-        * [JWA] draft-ietf-jose-json-web-algorithms-07
+        * [JWA] draft-ietf-jose-json-web-algorithms-08
 
-        * [JWS] draft-ietf-jose-json-web-signature-07
+        * [JWS] draft-ietf-jose-json-web-signature-08
 
-        * [JWE] draft-ietf-jose-json-web-encryption-07
+        * [JWE] draft-ietf-jose-json-web-encryption-08
 
-        * [JWK] draft-ietf-jose-json-web-key-07
+        * [JWK] draft-ietf-jose-json-web-key-08
 
-        * [JWT] draft-ietf-oauth-json-web-token-05
+        * [JWT] draft-ietf-oauth-json-web-token-06
 
 
 == Dependencies ==
@@ -129,6 +129,7 @@ not been implemented yet (most JWE algorithms).
 
         * Axel Nennker and the guys behind OpenInfoCard.
         * Everyone on the JOSE IETF WG list.
+        * Ville Kurkinen for adding Maven support.
         * CertiVox UK for supporting the development.
 
 
