--- a/Home.wiki
+++ b/Home.wiki
@@ -90,6 +90,8 @@ The library code comes with complete JavaDocs which can help you discover and ma
 
         * [JWK] draft-ietf-jose-json-web-key-08
 
+        * [JPSK] draft-jones-jose-json-private-and-symmetric-key-00
+
         * [JWT] draft-ietf-oauth-json-web-token-06
 
 
@@ -128,6 +130,7 @@ not been implemented yet (most JWE algorithms).
 == Acknowledgements ==
 
         * Axel Nennker and the guys behind OpenInfoCard.
+        * Justin Richer from MITRE.
         * Everyone on the JOSE IETF WG list.
         * Ville Kurkinen for adding Maven support.
         * CertiVox UK for supporting the development.
