--- a/Home.wiki
+++ b/Home.wiki
@@ -115,10 +115,8 @@ System.out.println(jwtClaims.toJSONObject());
 // Request JWT encrypted with RSA-OAEP and 128-bit AES/GCM
 JWEHeader header = new JWEHeader(JWEAlgorithm.RSA_OAEP, EncryptionMethod.A128GCM);
 
-
 // Create the encrypted JWT object
 EncryptedJWT jwt = new EncryptedJWT(header, jwtClaims);
-
 
 // Create an encrypter with the specified public RSA key
 RSAEncrypter encrypter = new RSAEncrypter(publicKey);
@@ -150,12 +148,11 @@ System.out.println(jwtString);
 // Parse back
 jwt = EncryptedJWT.parse(jwtString);
 
-// Create an decrypter with the specified private RSA key
+// Create a decrypter with the specified private RSA key
 RSADecrypter decrypter = new RSADecrypter(privateKey);
 
 // Decrypt
 jwt.decrypt(decrypter);
-
 
 // Retrieve JWT claims
 System.out.println(jwt.getJWTClaimsSet().getIssuer());;
