--- a/Home.wiki
+++ b/Home.wiki
@@ -213,14 +213,13 @@ factored out of the OpenInfoCard project. A rewrite to fully decouple JOSE + JWT
 object representation from crypto algorithm implementation led to the next major 
 2.0 release in October 2012.
 
-You're welcome to contribute crypto handlers for standard algorithms which have
-not been implemented yet (most JWE algorithms).
+The library has received numerous contributions and is now on the way to have all standard JWAs fully implemented. You're welcome to join us if you wish to help out with that.
 
 
 == Acknowledgements ==
 
         * Axel Nennker and the guys behind OpenInfoCard for providing much of the initial code.
-        * Justin Richer from MITRE for handling releases to Maven Central, JPSK support, numerous fixes and suggestions.
+        * Justin Richer from MITRE for handling releases to Maven Central, JPSK support, numerous improvements, fixes and suggestions.
         * Ville Kurkinen for adding initial Maven support.
         * David Ortiz for initiating RSA encryption development.
         * Juraj Somorovsky for security related reviews and improvements.
