--- a/Home.wiki
+++ b/Home.wiki
@@ -26,15 +26,17 @@ The JOSE and JWT object representation is completely decoupled from JSON Web Alg
 The library currently ships a ready implementation of the following standard 
 algorithms:
 
-	* HMAC signatures with HS256, HS384 and HS512.
+	* HMAC integrity with HS256, HS384 and HS512.
 	
 	* RSA signatures with RS256, RS384 and RS512.
 	
 	* EC signatures with ES256, ES384 and ES512.
 
-        * RSAES-PKCS1-V1_5 encryption with A128CBC+HS256, A256CBC+HS512, A128GCM and A256GCM.
+        * RSAES-PKCS1-V1_5 encryption with A128CBC-HS256, A256CBC-HS512, A128GCM and A256GCM.
 
-        * RSAES OAEP encryption with A128CBC+HS256, A256CBC+HS512, A128GCM and A256GCM.
+        * RSAES OAEP encryption with A128CBC-HS256, A256CBC-HS512, A128GCM and A256GCM.
+
+        * Direct shared symmetric key encryption with A128CBC-HS256, A256CBC-HS512, A128GCM and A256GCM.
 
         * JWE Compression with DEFLATE.
 
@@ -172,17 +174,15 @@ The library code comes with complete JavaDocs which can help you discover and ma
 
 == Related IETF drafts ==
 
-        * [JWA] draft-ietf-jose-json-web-algorithms-08
+        * [JWA] draft-ietf-jose-json-web-algorithms-10
 
-        * [JWS] draft-ietf-jose-json-web-signature-08
+        * [JWS] draft-ietf-jose-json-web-signature-10
 
-        * [JWE] draft-ietf-jose-json-web-encryption-08
+        * [JWE] draft-ietf-jose-json-web-encryption-10
 
-        * [JWK] draft-ietf-jose-json-web-key-08
+        * [JWK] draft-ietf-jose-json-web-key-10
 
-        * [JPSK] draft-jones-jose-json-private-and-symmetric-key-00
-
-        * [JWT] draft-ietf-oauth-json-web-token-06
+        * [JWT] draft-ietf-oauth-json-web-token-07
 
 
 == Dependencies ==
@@ -191,7 +191,11 @@ The Nimbus JOSE+JWT library has minimal dependencies.
 
         * Apache Commons Codec for Base64 and Base64URL encoding and decoding.
 
-        * JSON Smart for highly efficient parsing and serialisation of JSON. 
+        * javax.mail for MIME type handling.
+
+        * JSON Smart for highly efficient parsing and serialisation of JSON.
+
+        * JCIP for concurrency annotations.
 
         * [optional] The BouncyCastle.org cryptography provider for Java, for 
           ECDSA signing and verification.
@@ -231,6 +235,7 @@ The library has received numerous contributions and is now on the way to have al
         * David Ortiz for initiating RSA encryption development.
         * Juraj Somorovsky for security related reviews and improvements.
         * Lai Xin Chu for initial work on JWE.
+        * Wisgary Torres from the Microsoft Xbox team for important feedback and bug reports.
         * CertiVox UK for supporting the library development.
         * Everyone on the JOSE IETF WG list.
         * NimbusDS QA.
