--- a/Home.wiki
+++ b/Home.wiki
@@ -29,6 +29,8 @@ algorithms:
 	* HMAC integrity with HS256, HS384 and HS512.
 	
 	* RSASSA-PKCS1-V1_5 signatures with RS256, RS384 and RS512.
+
+	* RSASSA-PSS signatures with PS256, PS384 and PS512.
 	
 	* EC signatures with ES256, ES384 and ES512.
 
@@ -206,7 +208,7 @@ For Maven add:
 <dependency>
     <groupId>com.nimbusds</groupId>
     <artifactId>nimbus-jose-jwt</artifactId>
-    <version>2.18.2</version>
+    <version>2.20</version>
 </dependency>
 }}}
 
